// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`componentBox ui component test snapshot create can't close componentBox component 1`] = `
<article
  className="componentBox-component"
>
  <div
    className="header"
  >
    <div
      className="header-triangle"
      onClick={[Function]}
    >
      <span
        className="triangle-bottom"
      />
    </div>
    <div
      className="header-title"
    >
      newBox
    </div>
  </div>
  <div>
    simulate div component
  </div>
</article>
`;

exports[`componentBox ui component test snapshot create closable componentBox component 1`] = `
<article
  className="componentBox-component"
>
  <div
    className="header"
  >
    <div
      className="header-triangle"
      onClick={[Function]}
    >
      <span
        className="triangle-bottom"
      />
    </div>
    <div
      className="header-title"
    >
      newBox
    </div>
    <span
      className="header-close"
    >
      x
    </span>
  </div>
  <div>
    simulate div component
  </div>
</article>
`;

exports[`componentBox ui component test snapshot test show/hide content component click once triangle to hide content component 1`] = `
<article
  className="componentBox-component"
>
  <div
    className="header"
  >
    <div
      className="header-triangle"
      onClick={[Function]}
    >
      <span
        className="triangle-right"
      />
    </div>
    <div
      className="header-title"
    >
      newBox
    </div>
    <span
      className="header-close"
    >
      x
    </span>
  </div>
</article>
`;

exports[`componentBox ui component test snapshot test show/hide content component click twice triangle to show content component 1`] = `
<article
  className="componentBox-component"
>
  <div
    className="header"
  >
    <div
      className="header-triangle"
      onClick={[Function]}
    >
      <span
        className="triangle-bottom"
      />
    </div>
    <div
      className="header-title"
    >
      newBox
    </div>
    <span
      className="header-close"
    >
      x
    </span>
  </div>
  <div>
    simulate div component
  </div>
</article>
`;
